--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,6 @@
 }
 .main {
   width: 100%;
-  height: 1200px !important;
 }
 .btn{
     display: flex;
@@ -16,4 +15,8 @@
     align-items: center;
     width: 100% !important;
     margin-top: 10px;
+}
+.body{
+  width: 100vw;
+  height: 100vh; 
 }
