--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     align-items: center;
     width: 100% !important;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 .body{
   width: 100vw;
